# pathsala-backend

./: README.md  db.sqlite3  pyproject.toml  shell.nix
.jetclient/: jetclient.md
.jetclient/category/: _folder.md  add category.md  delete category.md  edit category.md  list category.md  view category.md
.jetclient/courses/: _folder.md  add course.md  delete course.md  edit course.md  list courses.md  view course.md
.jetclient/enrollment/: _folder.md  add enrollment.md  delete enrollment.md  edit enrollement.md  list enrollment.md
.jetclient/enrollment_ebda2c7b/: _folder.md  add enrollment.md  edit enrollment.md  list enrollment.md
.jetclient/user/: Get access token through Refersh token.md  _folder.md  create moderator (only admin).md  delte self profile.md  edit self profile.md  login.md  logout.md  register.md  user list (only admin).md  view self profile.md
.jetclient/users/: _folder.md
category/: models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py
config/: settings.py  urls.py
course_description/: apps.py  models.py  serializers.py  urls.py  views.py
course_description/migrations/: 0001_initial.py
course_ratings/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
course_syllabus/: apps.py  models.py  serializers.py
courses/: apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
enrollment/: models.py  serializers.py  urls.py  views.py
users/: models.py  permissions.py  roles.py  serializers.py  urls.py  utils.py  validators.py  views.py
(+49 files in other folders)
