[project]
name = "pathsala-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "django-filter>=25.1",
    "django-role-permissions>=3.2.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "icecream>=2.1.4",
    "pillow>=11.2.1",
]
